RESOLVED FIXED142132
[WK2][Mac] Fullscreen animations with mismatched aspect ratios are "squished".
https://bugs.webkit.org/show_bug.cgi?id=142132
Summary [WK2][Mac] Fullscreen animations with mismatched aspect ratios are "squished".
Jer Noble
Reported 2015-02-28 10:55:07 PST
[WK2][Mac] Use CALayer animations rather than NSWindow animations for the Fullscreen transition
Attachments
Patch (25.02 KB, patch)
2015-02-28 11:28 PST, Jer Noble
thorton: review+
Patch for landing (24.96 KB, patch)
2015-03-04 16:15 PST, Jer Noble
no flags
Jer Noble
Comment 1 2015-02-28 11:28:17 PST
Tim Horton
Comment 2 2015-03-02 12:02:40 PST
Comment on attachment 247605 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=247605&action=review > Source/WebKit2/ChangeLog:3 > + [WK2][Mac] Use CALayer animations rather than NSWindow animations for the Fullscreen transition The title is not great. Why not explain what you're fixing instead of how? > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:97 > + NSView* contentView = [window contentView]; star's on the wrong side. > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:378 > + NSView* contentView = [[self window] contentView]; star's on the wrong side > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:441 > - (NSArray *)customWindowsToEnterFullScreenForWindow:(NSWindow *)window Do we still need this customWindowsToEnterFullScreenForWindow: mechanism at all? > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:562 > + fadeAnimation.toValue = (id)CGColorGetConstantColor(kCGColorBlack); Could always use [NSColor blackColor] here (either way!).
Jer Noble
Comment 3 2015-03-02 14:09:14 PST
(In reply to comment #2) > Comment on attachment 247605 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=247605&action=review > > > Source/WebKit2/ChangeLog:3 > > + [WK2][Mac] Use CALayer animations rather than NSWindow animations for the Fullscreen transition > > The title is not great. Why not explain what you're fixing instead of how? Sure thing; I'll update the title. > > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:97 > > + NSView* contentView = [window contentView]; > > star's on the wrong side. Fixed. > > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:378 > > + NSView* contentView = [[self window] contentView]; > > star's on the wrong side Ditto. > > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:441 > > - (NSArray *)customWindowsToEnterFullScreenForWindow:(NSWindow *)window > > Do we still need this customWindowsToEnterFullScreenForWindow: mechanism at > all? Yes. You won't get the custom start callback unless you implement this delegate method. > > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:562 > > + fadeAnimation.toValue = (id)CGColorGetConstantColor(kCGColorBlack); > > Could always use [NSColor blackColor] here (either way!). Or! WebKit::cachedCGColor(WebKit::Color::black, WebKit::ColorSpaceDeviceRGB)! (I'll just leave it as is.) :)
Jer Noble
Comment 4 2015-03-04 16:15:31 PST
Created attachment 247908 [details] Patch for landing
WebKit Commit Bot
Comment 5 2015-03-19 17:21:30 PDT
Comment on attachment 247908 [details] Patch for landing Clearing flags on attachment: 247908 Committed r181770: <http://trac.webkit.org/changeset/181770>
Jessie Berlin
Comment 6 2015-03-19 18:55:14 PDT
I attempted to fix the 32-bit build breakage in http://trac.webkit.org/changeset/181776
Jer Noble
Comment 7 2015-03-19 20:19:38 PDT
Thanks Jessie!
Note You need to log in before you can comment on or make changes to this bug.